# test-claude

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  exchange_monitor.py  main.py  pyproject.toml  report.md  requirements.txt
bot/: analyzer.py  chain.py  config.py  executor.py  limitless.py  monitor.py  scanner.py  strategy.py
data/: mean_reversion_strategy_profiles.json  passive_tail_ladder_top5_portfolios.json  smart_wallets_latest.json
data/smart_wallets_history/: smart_wallets_2026-04-10T11-13-43.json
docs/: 1hr_paper_trading_report.md  agent_team_findings.md  copy_trading_bots.md  websocket_latency_report.md
polymarket/: config.py  db.py
polymarket/analyzer/: btc_5min_scoring.py  confusion_detector.py  metrics.py  rankings.py  red_flags.py  scoring.py  wallet_signal_accuracy.py
polymarket/api/: app.py  (+1 more)
scripts/: backtest_trader.py  btc_5min_analysis.py  btc_5min_populate_db.py  direct_wallet_copy_backtest.py  ensemble_backtest.py  init_db.py  live_analysis.py  live_bot.py  live_bot_meanrev_ws.py  live_bot_ws.py  mean_reversion_backtest.py  paper_trade.py  refresh_smart_wallets.py  run_daily_pipeline.py  tail_ladder_sweep.py
tests/: test_backtester_simulator.py  test_base_client.py  test_btc_5min_discovery.py  test_confusion_detector.py  test_live_bot_meanrev_runner.py  test_live_bot_ws.py  test_mean_reversion_backtester.py  test_mean_reversion_cli.py  test_mean_reversion_execution.py  test_mean_reversion_profiles.py  test_passive_tail_ladder_top5_portfolios.py  test_portfolio_backtester.py  test_tail_ladder_strategy.py
(+41 files in other folders)
